# docker

./: .env.example  README.md  docker-compose.yml
core/cpp-app/: CMakeLists.txt
core/cpp-app/src/: main.cpp
core/cpp-app/src/Application/: Application.cpp  Application.h
core/java-app/: pom.xml
core/java-app/src/main/java/com/example/rest/: Application.java
core/java-app/src/main/java/com/example/test/: Application.java  User.java  (+1 more)
core/java-app/src/main/resources/: application.properties  jwt.properties  log4j.properties
core/java-app/src/main/resources/database/migrations/: V20230806095454__create_users_table.sql  V20230806095509__insert_users_value.sql  V20231012__drop  V20231120050041__create_roles_table.sql  V20231120050142__insert_roles_value.sql  V20231120050308__create_profiles_tables.sql  V20231120050334__insert_profiles_value.sql  V20231120050409__create_activities_tables.sql  V20231120050502__insert_activities_value.sql  V20231120142014__create_roles_table.sql  V20231120142031__insert_roles_value.sql  V20231120142056__create_activities_tables.sql  V20231120142107__insert_activities_value.sql
core/java-app/src/main/resources/static/api/: config.json  docs.yaml
core/java-app/src/test/resources/: application-test.properties
core/nuxt-app/: package-lock.json  package.json  server.js
docker/cpp/: Dockerfile
docker/mysql/: Dockerfile
docker/mysql/conf/: my.cnf
docker/nginx/: Dockerfile
docker/nginx/conf/: app.conf  default.conf
docker/node/: Dockerfile
docker/openjdk/: Dockerfile
docker/php/: Dockerfile
docker/php/conf/: local.ini
(+43 files in other folders)
